Fixed error with dark mode in search and home

--- a/public/css/navBar.css
+++ b/public/css/navBar.css
@@ -49,7 +49,7 @@ form.searchBar {
 
 form.searchBar input[type=text] {
     text-transform: none;
-    color:black;
+    color: var(--fontColors);
     font-weight: normal;
     font-size: 17px;
     background: var(--searchBarColor);
@@ -58,6 +58,7 @@ form.searchBar input[type=text] {
     height: 100%;
     padding: 0;
     margin: 0;
+    padding-left: 10px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
 }
